--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,13 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "noImplicitAny": false,
-    "sourceMap": true,
-    "baseUrl": "src",
-    "outDir": "./dist",
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2016",
-      "dom"
-    ],
-    "types": [
-      "node"
-    ]
-  },
-  "awesomeTypeScriptLoaderOptions": {
-    "useWebpackText": true
-  }
+    "compilerOptions": {
+        "target": "es5",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "lib": ["es2016", "dom"],
+        "noImplicitAny": true,
+        "suppressImplicitAnyIndexErrors": true
+    }
 }
