--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/platform-server": "^4.3.0",
     "@angular/router": "^4.3.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "es6-shim": "^0.35.3",
+    "jquery": "^3.2.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.0.0-beta.6",
     "zone.js": "^0.8.12"
@@ -58,7 +60,7 @@
     "to-string-loader": "^1.1.5",
     "typescript": "2.3.4",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "2.2.1",
+    "webpack": "^2.7.0",
     "webpack-dev-server": "2.4.1",
     "webpack-merge": "^3.0.0"
   }
