--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "es6-shim": "^0.35.3",
+    "jquery": "^3.2.1",
     "ngx-bootstrap": "^1.8.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.0.0-beta.6",
