--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "angular2-template-loader": "^0.6.0",
     "autoprefixer-loader": "^3.2.0",
     "awesome-typescript-loader": "^3.0.4",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.9.0",
